# pirate-game-draft

./: .gitmodules  README.md  build-mode.md  concept.md  decisions.md  game-a-pirate-sandbox.md  game-b-shipbuilding-sim.md  holes.md  interop.md  multiplayer-infra.md  native-bootstrap-plan.md  next-steps.md  risks.md  sail-mode.md  tech-stack.md  vertical-slice.md  water-tech.md
.claude/: launch.json
.github/workflows/: ci.yml
native/: .gitignore  CMakeLists.txt  README.md
native/shaders/: fs_mesh.sc  fs_water.sc  varying.def.sc  vs_mesh.sc  vs_water.sc
native/src/: main.cpp  self_test.cpp  ship_mesh.cpp  ship_mesh.h  ship_model.cpp  ship_model.hpp  ship_view.cpp  ship_view.h  water_gpu.cpp  water_gpu.h
native/src/imgui/: imgui_bgfx.cpp  imgui_bgfx.h
prototype/: App.jsx  README.md  index.html
references/: black-flag.md  shipbuilding-history.md
spikes/threejs-sea-trial/: App.jsx  README.md  index.html
